--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -6,7 +6,7 @@ on:
     # Runs on pushes targeting the default branch
     branches: [main]
 env:
-  BASE_URL: /
+  BASE_URL: ''
 
 # Sets permissions of the GITHUB_TOKEN to allow deployment to GitHub Pages
 permissions:
